<resources>
    <string name="app_name">FoodBlog</string>
    <string name="intro_title_name">Welcome to Foodbook</string>
    <string name="hint_email_text">Your Email..</string>
    <string name="hint_password_text">Password...</string>
    <string name="reg_title_name">Register an Account</string>
    <string name="reg_btn_title">Register account</string>
    <string name="btn_title_login">Already have an account?</string>
    <string name="close">Close</string>
    <string name="open">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
